--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "konva": "^7.2.5",
     "vue": "^2.6.11",
+    "vue-konva": "^2.1.7",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "^4.5.13",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/test-utils": "^1.0.3",
